# streamsmart

./: .gitignore  AZURE_B1_LIMITATIONS.md  AZURE_DEPLOYMENT_FIX.md  AZURE_DEPLOYMENT_STATUS.md  AZURE_OPENAI_QUICK_START.md  AZURE_OPENAI_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUCCESS_ML.md  DEPLOY_INSTRUCTIONS.txt  DEPLOY_NOW.md  FEATURES.md  FINAL_STATUS.md  MANUAL_AZURE_DEPLOYMENT.md  ML_DEPLOYMENT_SUMMARY.md  ML_INTEGRATION_GUIDE.md  ML_TEST_RESULTS.md  MOOD_DETECTION_FIXED.md  NO_OPENAI_KEY_GUIDE.md  OFFLINE_OPTIMIZATION_GUIDE.md  OPTIMIZATION_RESULTS.md  OPTIMIZATION_SUMMARY.md  PRODUCTION_ISSUE_RESOLUTION.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_SUMMARY.md  STAGING_RELEASE.md  TASKS_COMPLETED.md  TESTING_PRODUCTION.md  TROUBLESHOOTING_UI.md  VIEW_AZURE_LOGS.md  azure-deployment.yml  deployment-urls.txt  docker-compose.yml  logs.sh  pyproject.toml  readme.md  requirements.txt  restart.sh  (+3 more)
streamsmart-backend/: .env.example  Dockerfile  precompute_recommendations.py  pyproject.toml
streamsmart-backend/app/: main.py
streamsmart-backend/app/recommender/: __init__.py  conversation_memory.py  main.py  mood_extractor.py  recommender.py  recommender_backup_20251113_214418.py  recommender_ml_optimized.py  recommender_old.py  recommender_ultra_light.py  user_profile.py
streamsmart-backend/data/: le_context.pkl  le_mood.pkl  le_movie.pkl  le_time.pkl  mood_recommendations.csv  movies_metadata.csv  rf_recommender_optimized.pkl  synthetic_ott_data_with_users.csv  tiny_ml_model.pkl  user_history.json  users.csv
(+52 files in other folders)
