[project]
name = "streamsmart"
version = "0.1.0"
description = "StreamSmart - AI-Powered OTT Content Recommendation Chatbot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.31.1",
    "pandas>=2.2.2",
    "sentence-transformers>=3.0.1",
    "torch>=2.4.1",
    "textblob>=0.17.1",
    "openai>=1.42.0",
    "python-dotenv>=1.0.1",
]
