[project]
name = "streamsmart"
version = "0.1.0"
description = "StreamSmart - AI-Powered OTT Content Recommendation Chatbot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.31.1",
    "pandas>=2.2.2",
    "textblob>=0.17.1",
    "openai>=1.54.0",
    "httpx>=0.27.0,<0.28.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
]
